--- a/env/test.env
+++ b/env/test.env
@@ -24,7 +24,7 @@ COOKIE_SECRET=w0OegNTmjhq3WBe0RVFm4LuKnlgOxQbM
 # expires in 3 days
 COOKIE_EXP=259200000
 
-HOST=
-USER=
+DB_HOST=
+DB_USER=
 PASSWORD=
 DATABASE=
