+ Added .idea to .gitignore + Updated OrderController to use Stripe Secret Key from env file

--- a/env/development.env
+++ b/env/development.env
@@ -24,7 +24,10 @@ COOKIE_SECRET=w0OegNTmjhq3WBe0RVFm4LuKnlgOxQbM
 # expires in 3 days
 COOKIE_EXP=259200000
 
-DB_HOST=
-DB_USER=
-PASSWORD=
-DATABASE=
+DB_HOST=173.249.10.82
+DB_USER=youthapp-dev
+PASSWORD=mDkDZGx4NMcwMPB3
+DATABASE=youthapp-dev
+
+#STRIPE
+STRIPE_SECRET_KEY=
