--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.12",
+    "nodemon": "^3.1.10",
     "stripe": "^15.8.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
