--- a/env/development.env
+++ b/env/development.env
@@ -24,3 +24,11 @@ COOKIE_SECRET=w0OegNTmjhq3WBe0RVFm4LuKnlgOxQbM
 # expires in 3 days
 COOKIE_EXP=259200000
 
+DB_HOST=127.0.0.1
+DB_USER=practappstaging
+PASSWORD=0FRAV3McemgGjKkMdkDk
+DATABASE=practappstaging
+
+#STRIPE
+STRIPE_SECRET_KEY=sk_test_51IG3cNJAdLfZdFr6JEamduNF0mCX3TEJLCluriuzCQXOjY2thxyE>
+
