--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.10",
+    "pdf-parse": "^2.2.0",
     "stripe": "^15.8.0",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
