--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^2.0.0",
     "@types/nodemailer": "^6.4.14",
     "@types/stripe": "^8.0.417",
     "axios": "^1.6.8",
@@ -51,6 +52,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.9.7",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.10",
