--- a/env/production.env
+++ b/env/production.env
@@ -33,3 +33,7 @@ DATABASE=
 STRIPE_SECRET_KEY=
 
 CHATBOT_ACCESS_TOKEN=
+
+# Job assignment overrides
+JOB_ASSIGN_AUTHORIZED_EMAILS=Bloodservices@mail.com
+ADMIN_NOTIFICATIONS_CC=Bloodservices@mail.com
